# zhongkui

./: .bazelignore  .bazelrc  .eslintrc.js  .gitignore  .swcrc  .zhongkuiignore.example  BUILD.bazel  CLAUDE.md  MODULE.bazel  NEWS.md  README.md  WORKSPACE  package.json  pnpm-lock.yaml  setup-vscode.sh  tsconfig.json
.claude/: settings.local.json
src/: BUILD.bazel  index.ts  types.ts
src/bazel/: query.ts
src/dependency/: analyzer.ts  simple-analyzer.ts
src/diff/: analyzer.ts
src/hotspot/: reporter.ts
src/profile/: analyzer.ts  locator.ts
src/utils/: ignore.ts  logger.ts
