load("@npm_zhongkui//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

npm_link_all_packages()

# Export configuration files for other packages to use
exports_files([
    ".swcrc",
    "tsconfig.json",
])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)