module(
    name = "zhongkui",
    version = "0.0.6",
)

# Bazel dependencies
bazel_dep(name = "aspect_rules_js", version = "1.42.3")
bazel_dep(name = "aspect_rules_ts", version = "2.4.2")
bazel_dep(name = "aspect_rules_swc", version = "1.2.2")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_nodejs", version = "6.5.0")

# Node.js toolchain
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.6.0")

# TypeScript extension removed - using pure SWC approach

# SWC setup - alternative TypeScript transpiler

# npm dependencies - remove dev_dependency to make it visible to external modules
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm_zhongkui",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm_zhongkui")
