# TypeScript configuration
load("@aspect_rules_js//js:defs.bzl", "js_library", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

# TypeScript project compilation
ts_project(
    name = "zhongkui_ts",
    srcs = glob(["**/*.ts"]),
    declaration = True,
    declaration_map = True,
    resolve_json_module = True,
    source_map = True,
    transpiler = "tsc",
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/commander", 
        "//:node_modules/winston",
    ],
)

# Main CLI binary
js_binary(
    name = "zhongkui",
    data = [":zhongkui_ts"],
    entry_point = "index.js",
)
