# Pure SWC transpilation without ts_project
load("@aspect_rules_js//js:defs.bzl", "js_library", "js_binary")
load("@aspect_rules_swc//swc:defs.bzl", "swc")

# SWC transpilation of TypeScript files
swc(
    name = "zhongkui_js",
    srcs = glob(["**/*.ts"]),
    swcrc = "//:.swcrc",
)

# Main CLI binary - self-contained with all dependencies
js_binary(
    name = "zhongkui",
    data = [
        ":zhongkui_js",
        "//:node_modules/@types/node",
        "//:node_modules/commander", 
        "//:node_modules/winston",
    ],
    entry_point = "index.js",
    visibility = ["//visibility:public"],
)
